# deepface-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
calibration/: Cargo.toml  README.md  compute-thresholds.py  generate-csv.py
calibration/src/: main.rs
examples/centerface/: main.rs
examples/deepid/: main.rs
examples/dlib/: main.rs
examples/dlib-detection/: main.rs
examples/dlib-recognition/: main.rs
examples/facenet/: main.rs
examples/yunet/: main.rs
src/: lib.rs
src/detection/: centerface.rs  dlib.rs  mod.rs  yunet.rs
src/metrics/: constants.rs  distance.rs  mod.rs  verify.rs
src/recognition/: deepid.rs  dlib.rs  facenet.rs  mod.rs  verify.rs
