[package]
name = "deepface"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "calibration",
]

[dependencies]
image = "0.25"
burn = {version = "0.19", features = ["ndarray", "vision"]}
dlib_sys = {package = "dlib", git = "https://github.com/a2va/dlib-rs", rev = "4e8c8c8", optional = true, features = ["embed-all"]}

thiserror = "1"
tuple-conv = "1.0.1"

[build-dependencies]
reqwest = {version = "0.12", features = ["blocking", "rustls-tls"]}
burn-import = "0.19"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# burn = { version = "0.17", default-features = false } # Default features disabled for wasm target

[features]
default = ["yunet", "centerface", "dlib-detection", "deepid", "facenet512", "dlib-recognition"]
# default = []

# Detection models
yunet = []
centerface = []
dlib-detection = ["dlib_sys", "dlib_sys/embed-fd-nn", "dlib_sys/embed-lp"]

# Recognition models
deepid = []
facenet512 = []
dlib-recognition = ["dlib_sys", "dlib_sys/embed-fe-nn"]

[profile.dev]
opt-level = 2

# Detection examples
[[example]]
name = "yunet"
required-features = ["yunet"]
[[example]]
name = "centerface"
required-features = ["centerface"]
[[example]]
name = "dlib-detection"
required-features = ["dlib-detection"]

# Recognition examples
[[example]]
name = "deepid"
required-features = ["deepid"]
[[example]]
name = "facenet"
required-features = ["facenet512"]
[[example]]
name = "dlib-recognition"
required-features = ["dlib-recognition"]
